<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".LoginActivity">


        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/firebase_logo" />

        <EditText
            android:id="@+id/et_email_login"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="32dp"
            android:layout_marginTop="28dp"
            android:hint="@string/email_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <EditText
            android:id="@+id/et_password_login"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="32dp"
            android:layout_marginTop="12dp"
            android:hint="@string/password_login"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email_login" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="32dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/black"
            android:text="@string/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password_login" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/not_registered_click_here_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>